# bond-agent

./: .gitignore  .gitlab-ci.yml  README.md  __version__.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: Build-and-Release.yml  Release.yml  build.yml  release.yml  scss-build.yml  test.yml
libs/actions/: linux_bond_service.py  mac_bond_service.py  windows_bond_service.py
libs/actions/ABC_Base/: bond_service_abc.py
libs/actions/ABC_Derive/: bond_service_derive.py
libs/actions/common/Console_Executor/: console_executor.py
libs/actions/common/File_read/: file_reader.py
libs/actions/common/Linux/: execute_file_utility.py
libs/actions/common/Mac/: execute_file_utility.py
libs/actions/common/PythonRunner/: pythonrunner.py
libs/actions/common/Windows/: execute_file_utility.py
libs/actions/common/Zip/: zip.py
libs/actions/common/writer/: writer.py
libs/config/: __version__.py  config.py  http_code.py
libs/models/: bond_service_models.py
libs/service/: __init__.py  windows_stray.py
libs/service/utility/: bond_argparse.py  exception_handle_text.py
static/css/: exception_error.css  exception_error.css.map  index.css  index.css.map
static/js/: exception_error.js  index.js
static/scss/: _common.scss  _mixins.scss  _variables.scss  exception_error.scss  index.scss
templates/: exception_error.html  index.html
tests/: test_main.py
tests/libs/actions/: test_bond_service.py
tests/libs/config/: test_config.py
tests/libs/models/: test_bond_service_models.py
tests/libs/service/: test_windows_stray.py
(+4 files in other folders)
